--- a/assets/sass/pages/pages.scss
+++ b/assets/sass/pages/pages.scss
@@ -9,12 +9,19 @@
     @include media-below(sm) {
         padding-top: 20px;
     }
+    @include media-below(xs) {
+        padding-top: 50px;
+    }
     &-title {
         font-size: 40px;
         font-family: $barlowC;
         font-weight: 700;
         margin-bottom: 30px;
         @include media-below(sm) {
+            font-size: 24px;
+            margin-bottom: 15px;
+        }
+        @include media-below(xs) {
             font-size: 24px;
             margin-bottom: 15px;
         }
@@ -125,10 +132,16 @@
             @include media-below(md) {
                 margin-bottom: 50px;
             }
+            @include media-below(sm) {
+                margin-bottom: 0;
+            }
         }
         &--right {
             @include media-below(md) {
-                margin-bottom: 150px;
+                margin-bottom: 100px;
+            }
+            @include media-below(xs) {
+                margin-bottom: 50px;
             }
         }
         &-order {
@@ -160,6 +173,10 @@
             padding-left: 30px;
             padding-right: 30px;
             text-align: center;
+            @include media-below(sm) {
+                font-size: 22px;
+                margin-bottom: 15px;
+            }
         }
         &-answer {
             select {
