--- a/assets/sass/pages/pages.scss
+++ b/assets/sass/pages/pages.scss
@@ -137,7 +137,7 @@
             }
         }
         &--right {
-            @include media-below(md) {
+            @include media-below(lg) {
                 margin-bottom: 100px;
             }
             @include media-below(xs) {
@@ -175,10 +175,18 @@
             text-align: center;
             @include media-below(sm) {
                 font-size: 22px;
+                line-height: 26px;
                 margin-bottom: 15px;
+                padding-bottom: 15px;
+                padding-left: 15px;
+                padding-right: 15px;
             }
         }
         &-answer {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
             select {
                 background:url('/assets/images/select-bg@2x.png') no-repeat center right;
                 font-size: 18px;
@@ -212,12 +220,20 @@
                     margin-right: 8px;
                     z-index: 2;
                     border:0;
+                    @include media-below(sm) {
+                        font-size: 16px;
+                    }
                     &:last-child {
                         margin-right: 0;
                     }
                     &:hover {
                         background-image: linear-gradient(90deg, #02a1f9 0%, #29f19c 100%);
                         color:$white;
+                    }
+                    &--red {
+                        &:hover {
+                            background-image: linear-gradient(90deg, #E00135 0%, #FF5E39 100%);
+                        }
                     }
                 }
             }
