--- a/assets/sass/pages/pages.scss
+++ b/assets/sass/pages/pages.scss
@@ -253,16 +253,7 @@
     text-align: center;
     color:$white;
     &-inner {
-        @include media-above(lg) {
-            max-height: 650px;
-            overflow: auto;
-            margin-top: 100px;
-        }
-        @include media-below(md) {
-            overflow: auto;
-            max-height: 500px;
-            padding-top: 50px;
-        }
+        margin: 100px 0 50px 0;
     }
     &-title {
         font-size: 36px;
