--- a/assets/sass/common/common.scss
+++ b/assets/sass/common/common.scss
@@ -1,5 +1,6 @@
 //google fonts
-@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;500;700&family=Barlow:wght@400;500;700&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;500;700&family=Barlow:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&display=swap');
 
 body {
     font-size: 14px;
