--- a/assets/sass/pages/pages.scss
+++ b/assets/sass/pages/pages.scss
@@ -6,9 +6,6 @@
     background: url('/assets/images/welcome-bg.png') no-repeat center center;
     background-size: cover;
     color:$white;
-    @include media-below(sm) {
-        padding-top: 100px;
-    }
     &-title {
         font-size: 40px;
         font-family: $barlowC;
@@ -173,10 +170,10 @@
             padding-right: 30px;
             text-align: center;
             @include media-below(sm) {
-                font-size: 22px;
-                line-height: 26px;
-                margin-bottom: 15px;
-                padding-bottom: 15px;
+                font-size: 20px;
+                line-height: 24px;
+                margin-bottom: 10px;
+                padding-bottom: 10px;
                 padding-left: 15px;
                 padding-right: 15px;
             }
@@ -203,6 +200,11 @@
                 z-index: 2;
                 &:focus {
                     outline: none;
+                }
+                @include media-below(sm) {
+                    font-size: 16px;
+                    line-height: 20px;
+                    padding:10px 15px;
                 }
             }
             &-items {
@@ -257,10 +259,6 @@
     background: linear-gradient(#13c1f5 0%, #13a6f5 100%);
     text-align: center;
     color:$white;
-    &-inner {
-        margin: 100px 0 50px 0;
-    }
-    
     &-title {
         font-size: 30px;
         font-weight: 700;
@@ -281,8 +279,8 @@
             font-size: 24px;
         }
         @include media-below(sm) {
-            font-size: 20px;
-            line-height: 26px;
+            font-size: 14px;
+            line-height: 18px;
         }
     }
     &-option {
@@ -290,6 +288,9 @@
         border: 2px dotted #b7e9ff;
         margin-top: 10px;
         @include prefix(border-radius, 10px);
+        @include media-below(sm) {
+                padding-bottom: 0;
+        }
         &-item {
             padding:15px 0;
             border-bottom:1px dotted #b7e9ff;
@@ -298,6 +299,9 @@
             }
             &:last-child {
                 border-bottom:0;
+                @include media-below(sm) {
+                    padding-bottom: 0;
+                }
             }
             &-text {
                 font-size: 16px;
@@ -305,6 +309,8 @@
                 margin-bottom: 10px;
                 @include media-below(sm) {
                     margin-bottom: 5px;
+                    font-size: 14px;
+                    line-height: 20px;
                 }
                 a {
                     color: $darkBlue;
@@ -318,17 +324,26 @@
         justify-content: center;
         font-size: 18px;
         cursor: pointer;
+        @include media-below(sm) {
+            font-size: 16px;
+        }
         &-code {
             background: $white;
             color: $black;
             @include prefix(border-radius, 50px 0 0 50px);
             padding:10px 20px;
+            @include media-below(sm) {
+                padding:5px 15px;
+            }
         }
         &-copy-text {
             background-color: #ff6000;
             color: $white;
             @include prefix(border-radius, 0 50px 50px 0);
             padding:10px 20px;
+            @include media-below(sm) {
+                padding:5px 15px;
+            }
         }
     }
     &-get-discount-btn {
@@ -374,6 +389,11 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        img {
+            @include media-below(sm) {
+                width: 70%;
+            }
+        }
     }
 }
 
