some fix and developments

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -18,3 +18,5 @@
 @import '../../node_modules/fullpage.js/dist/fullpage.min';
 //animate.css
 @import '../../node_modules/animate.css/animate.min';
+//sweetalert
+@import '../../node_modules/sweetalert2/dist/sweetalert2.min'
