font family fix

--- a/assets/sass/common/variable.scss
+++ b/assets/sass/common/variable.scss
@@ -6,5 +6,5 @@ $lightBlue : #13A6F5;
 
 
 //font family
-$barlowC : 'Oswald', sans-serif;
-$barlow : 'Oswald', sans-serif;
+$barlowC : 'Barlow Condensed', sans-serif;
+$barlow : 'Barlow', sans-serif;
